[metadata]
name = platform_wasm
version = attr: platform_wasm.__version__
author = Paul Peny
description = support for interfacing packages with wasm hosts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pygame-web/platform_wasm

project_urls =
    Wiki = https://pygame-web.github.io/platform_wasm/README.md
    Bug Tracker = https://github.com/pygame-web/platform_wasm/issues
    Source Code = https://github.com/pygame-web/platform_wasm
    Project Page = https://github.com/pygame-web/platform_wasm

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: WebAssembly
    Environment :: WebAssembly :: Emscripten
    Environment :: WebAssembly :: WASI

[options]
packages = platform_wasm
zip_safe = True
python_requires = >=3.11
include_package_data = True

